--- a/src/components/RowProducts3/rowProducts3.css
+++ b/src/components/RowProducts3/rowProducts3.css
@@ -14,7 +14,7 @@
 .container-item3:hover{
     opacity: 0.7;
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.05);
     transition: 0.5s ease-out;
 }
 
@@ -57,10 +57,15 @@
         width: 360px;
     }
 }
-@media screen and (max-width:755px){
+
+@media screen and (max-width:1118px){
+    .left-item3, .right-item3, .mid-item3{
+        width: 100%;
+    }
     .row-contain3{
         flex-direction: column;
         height: auto;
+        width: 100%;
     }
     .container-item3{
         width: 100%;
