--- a/src/layouts/HomePage/homePage.css
+++ b/src/layouts/HomePage/homePage.css
@@ -1,4 +1,4 @@
-.container-homepage{
+.container-homepage {
     min-height: 105vh;
     display: flex;
     justify-content: center;
@@ -7,18 +7,19 @@
     margin-top: 300px;
 }
 
-.background-home{
+.background-home {
     width: 100%;
-    height: 600px;  
+    height: 600px;
     background-image: linear-gradient(rgba(250, 250, 252, 0.5), rgba(8, 8, 8, 0.5)),
-                  url('../../image/backgroundHome.jpg');
+        url('../../image/backgroundHome.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center; ;
-    position: absolute;     
+    background-position: center;
+    position: absolute;
     top: 0;
     z-index: -1;
 }
+
 .container-home-main {
     display: flex;
     margin-top: 5rem;
@@ -28,32 +29,33 @@
     justify-content: center;
     align-content: center;
 }
+
 @media screen and (max-width:1001px) {
-    .container-home-main{
+    .container-home-main {
         margin-top: 0rem;
     }
 }
 
 @media screen and (max-width:991px) {
-    .container-home-main{
+    .container-home-main {
         margin-top: 5rem;
     }
 }
 
 @media screen and (max-width:720px) {
-    .container-home-main{
+    .container-home-main {
         margin-top: 9rem;
     }
 }
 
 @media screen and (max-width:662px) {
-    .container-home-main{
+    .container-home-main {
         margin-top: 4rem;
     }
 }
 
 @media screen and (max-width:585px) {
-    .container-home-main{
+    .container-home-main {
         margin-top: 4rem;
     }
 }
