--- a/src/components/Payments/style.css
+++ b/src/components/Payments/style.css
@@ -88,7 +88,7 @@ main .checkout-form form .checkbox-control {
 main .checkout-form form .form-control-btn {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 main .checkout-form form .form-control-btn button {
